---------------------------------------------------------------------------------------------------
Version: 0.11.0
Date: 02. 11. 2020
  Added:
    - Support for Factorio 1.0
    - New mod setting to toggle whether decoratives are automatically removed when new entities are built
  Removed:
    - Support for Factorio 0.18 (use Dectorio version 0.10.9 instead)
    - Support for Industrial Revolution 1.x mod
    - Dependencies for third party mods that are no longer being actively maintained
---------------------------------------------------------------------------------------------------
Version: 0.10.9
Date: 02. 07. 2020
  Bugfixes:
    - Fixed a conflict with H2O mod that occurred if H2O was loaded after Dectorio at runtime
    - Fixed an issue when using Transport Drones mod where the Lawnmower would remove corpses that are required for the transport depots to function
  Locales:
    - Updated Portuguese, Brazilian translation (thanks to Unknow0059)
---------------------------------------------------------------------------------------------------
Version: 0.10.8
Date: 21. 05. 2020
  Bugfixes:
    - Extended existing Arborium support to cover Arborium Renewed mod which was causing conflicts with certain mod packs
  Locales:
    - Updated French translation (thanks to daikyraraga)
    - Updated Hungarian translation (thanks to mmnetworkteam)
---------------------------------------------------------------------------------------------------
Version: 0.10.7
Date: 18. 05. 2020
  Added:
    - New setting to toggle Lawnmower functionality independently of Landscaping (thanks to andreasferber)
  Locales:
    - Updated German translation (thanks to andreasferber and Meisterfuchs)
    - Updated Russian translation (thanks to 1avek1)
    - Updated Hungarian translation (thanks to mmnetworkteam)
    - Updated Polish translation (thanks to tomplus)
---------------------------------------------------------------------------------------------------
Version: 0.10.6