@@ -4,6 +4,7 @@ Date: 02. 11. 2020
   Added:
     - Support for Factorio 1.0
     - New mod setting to toggle whether decoratives are automatically removed when new entities are built
+    - Grid concrete recipe now matches concrete recipe when AAI Industry mod is present
   Removed:
     - Support for Factorio 0.18 (use Dectorio version 0.10.9 instead)
     - Support for Industrial Revolution 1.x mod
